--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="18sp"
+    android:focusable="false"
+    android:clickable="false"
     android:gravity="center_vertical"
     android:id="@+id/list_item_forecast_textview">
 
